--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://redneutorn.github.io/robofriends/",
+  "homepage": "https://hypeneutron.github.io/robofriends/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,8 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
